@startuml PriceGoblinDatabase

entity "users" as users {
  + id : integer <<PK>>
  --
  email : varchar
  password_hash : varchar
  locale : varchar
  created_at : timestamp
}

entity "products" as products {
  + id : integer <<PK>>
  --
  name : varchar
  url : varchar
  category : varchar
  image_url : varchar
  created_at : timestamp
}

entity "tracking" as tracking {
  + id : integer <<PK>>
  --
  user_id : integer <<FK>>
  product_id : integer <<FK>>
  is_active : bool
  source : varchar
  target_price : float
  created_at : timestamp
}

entity "price_entries" as price_entries {
  + id : integer <<PK>>
  --
  product_id : integer <<FK>>
  price : float
  created_at : timestamp
}

entity "notification_logs" as notification_logs {
  + id : integer <<PK>>
  --
  tracking_id : integer <<FK>>
  price_entry_id : integer <<FK, nullable>>
  channel : varchar
  recipient : varchar
  notified_price : float
  target_price : float
  notified_at : timestamp
}

users ||--o{ tracking : tracks
products ||--o{ tracking : tracked_product
products ||--o{ price_entries : price_history
tracking ||--o{ notification_logs : sends
price_entries ||--o{ notification_logs : source_price

@enduml
